--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Cristiano | ICS2O-Unit0-00-HTML | Date 2022 */
+/* Cristiano | ICS2O-Unit6-02-HTML | May 16 2022 */
 
 body {
   text-align: center;
